@@ -3,6 +3,7 @@ crystal-facet-uml (1.56.0) UNRELEASED; urgency=medium
   [ Andreas Warnke ]
   * gtk3 support dropped, more than 100 #if preprocessor-statements removed
   * GtkFileChooserDialog replaced by GtkFileDialog (without filetype selection)
+  * XMI export traces if a classifier contains a child twice (in DEBUG mode)
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 10 Feb 2024 09:00:00 +0100
 
